--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm an incoming freshman at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a> interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching heterogeneity in Acute Myeloid Leukemia at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate Prime Minister</a>, and building CovBot, an AI-powered chatbot to control COVID-19 misinformation in low-income counties. </p> 
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 1st year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a> interested in pharmacogenomics, bioinformatics, and precision medicine. I'm currently helping research a cellular hierarchy framework for characterizing heterogeneity and advancing precision medicine in Acute Myeloid Leukemia at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as Prime Minister of <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>, and building CovBot, an AI-powered chatbot to control COVID-19 misinformation in low-income counties. </p> 
                   <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                
@@ -118,7 +118,7 @@
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Summer Student</h5>
-                     <h6>Medical Biophysics at University of Toronto</h6>
+                     <h6>Department of Medical Biophysics, UofT</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
@@ -400,7 +400,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm an incoming freshman at McMaster University interested in bioinformatics, pharmacogenomics, and global health. I'm currently researching heterogeneity in Acute Myeloid Leukemia at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as Prime Minister of<a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>, and building CovBot, an AI chatbot to control COVID-19 misinformation in low-income counties. </p> 
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 1st year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a> interested in pharmacogenomics, bioinformatics, and precision medicine. I'm currently helping research a cellular hierarchy framework for characterizing heterogeneity and advancing precision medicine in AML at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as Prime Minister of <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>, and building CovBot, an AI-powered chatbot to control COVID-19 misinformation in low-income counties. </p> 
                   <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
@@ -433,7 +433,7 @@
                <div class="swiper-slide shadow fade">
                   <div class = "experience-title">
                      <h5>Summer Student</h5>
-                     <h6>Medical Biophysics Department, Univeristy of Toronto</h6>
+                     <h6>Department of Medical Biophysics, UofT</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
