--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. I'm an aspiring physician-scientist with diverse research interests in precision medicine, tumor immunology, and translational cancer genomics. You'll usually catch me exploring Toronto's culinary landscape, strumming my acoustic guitar, or enjoying some post-workout Chipotle. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. I'm an aspiring physician-scientist with diverse research interests in precision medicine, tumor immunology, and translational cancer genomics. You'll usually catch me exploring Toronto's culinary landscape, strumming my acoustic guitar, or enjoying some post-workout Chipotle. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                
                <div class = "about-image fade">
@@ -207,6 +207,14 @@
                   </div>
                </div>
             </div>
+         </div>
+
+         <div class="swiper-buttons">
+            <div class="swiper-button-next fade"></div>
+            <div class="swiper-button-prev fade"></div>
+         </div>
+         <div class="container center-text high-emphasis-text italicize cta fade">
+            <h6>Interested in working together? Here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
 
       <!-- 
@@ -348,8 +356,17 @@
                   </div>
                </div>
                <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Analysis</a></h5>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al). I contributed to data analysis for Figure 5.</p>
+                  <div class="project-row">
+                     <span class="dot-jupyter-notebook"></span>
+                     <p>Jupyter Notebook</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More!</a></h6>
+                  </div>
+               </div>
+               <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/wlawt/synbiolic" target = "_blank">Synbiolic</a></h5>
-                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist) </p>
+                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist.)</p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
@@ -363,15 +380,6 @@
                      <span class="dot-python"></span>
                      <p>Python</p>
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More!</a></h6>
-                  </div>
-               </div>
-               <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/LSTM-for-Apple-Stock-Predictions" target = "_blank">Apple Stock Prediction</a></h5>
-                  <p>Used LSTM Neural Networks to predict Apple stock prices from 2010-2016 with an accuracy of 98.3%.</p>
-                  <div class="project-row">
-                     <span class="dot-jupyter-notebook"></span>
-                     <p>Jupyter Notebook</p>
-                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
                <!-- <div class="project small-bounce fade">
@@ -460,8 +468,8 @@
                      <ul class="content__container__list">
                         <li class="content__container__list__item">STUDENT RESEARCHER</li>
                         <li class="content__container__list__item">SOFTWARE DEVELOPER</li>
-                        <li class="content__container__list__item">COFFEE AFICIONADO</li>
-                        <li class="content__container__list__item">GUITAR ENTHUSIAST</li>
+                        <li class="content__container__list__item">COFFEE ENTHUSIAST</li>
+                        <li class="content__container__list__item">CERTIFIED FOODIE</li>
                      </ul>
                   </div>
                </div>
@@ -489,8 +497,7 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 1st year Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a> interested in pharmacogenomics, bioinformatics, and precision medicine. I'm currently helping research a cellular hierarchy framework for characterizing heterogeneity and advancing precision medicine in AML at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, scaling mental health projects for 130,000+ students as Prime Minister of <a href="http://www.yrdsb.ca/studenttrustees/Pages/York%20Region%20Presidents'%20Council.aspx" target="_blank" class="text-emphasis p-bold p-spaced-underline">YRDSB's Student Senate</a>, and building CovBot, an AI-powered chatbot to control COVID-19 misinformation in low-income counties. </p> 
-                  <p class = "fade">You'll usually catch me training for an upcoming marathon, cooking Jamie Oliver-inspired dishes, or occasionally strumming my guitar outside Union Station! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">systems pharmacology</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or for talking over some cold brew!</p>
+                  <p class = "fade">Hey there, I'm <span class = "text-emphasis p-bold">Suraj Bansal</span>! I'm currently a Level 1 Health Sciences student at <a href="https://bhsc.mcmaster.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">McMaster University</a>, and a novice student researcher at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>. I'm an aspiring physician-scientist with diverse research interests in precision medicine, tumor immunology, and translational cancer genomics. You'll usually catch me exploring Toronto's culinary landscape, strumming my acoustic guitar, or enjoying some post-workout Chipotle. Reachout if you're interested in learning more about my endeavors, working together, or just chatting over coffee.</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/suraj.jpg" style = "width:250px;height:250px">
@@ -634,6 +641,15 @@
                   </div>
                </div>
                <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Analysis</a></h5>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al). I contributed to data analysis for Figure 5.</p>
+                  <div class="project-row">
+                     <span class="dot-jupyter-notebook"></span>
+                     <p>Jupyter Notebook</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ashpublications.org/blood/article/136/Supplement%201/27/470478/Variation-in-Stem-Cell-Driven-Hierarchies" target = "_blank">Learn More!</a></h6>
+                  </div>
+               </div>
+               <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/wlawt/synbiolic" target = "_blank">Synbiolic</a></h5>
                   <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist) </p>
                   <div class="project-row">
@@ -651,24 +667,6 @@
                      <h6 class = "low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce fade-mobile">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/LSTM-for-Apple-Stock-Predictions" target = "_blank">Stock Prediction</a></h5>
-                  <p>Used LSTM Neural Networks to predict Apple stock prices from 2010-2016 with an accuracy of 98.3%.</p>
-                  <div class="project-row">
-                     <span class="dot-jupyter-notebook"></span>
-                     <p>Jupyter Notebook</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More</a></h6>
-                  </div>
-               </div>
-               <!-- <div class="project small-bounce fade-mobile">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/frontline-connect-canada" target = "_blank">Frontline Connect</a></h5>
-                  <p>Developed the website for a physician-led grassroots Covid-19 relief initiative for virtual communication in hospitals.</p>
-                  <div class="project-row">
-                     <span class="dot-html"></span>
-                     <p>HTML</p>
-                     <h6 class = "low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
-                  </div>
-               </div> -->
             </div>
          </div>
       </section>
