--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
                   </div>
                </div>
                <div class="project small-bounce fade">
-                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies Analysis</a></h5>
-                  <p>Repository of analysis notebooks and data for AML hierarchies paper (Zeng et al). I contributed to data analysis for Figure 5.</p>
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/andygxzeng/AMLHierarchies" target = "_blank">AML Hierarchies</a></h5>
+                  <p>Repository of analysis notebooks and data for AML hierarchies paper. I contributed to the Figure 5 notebooks.</p>
                   <div class="project-row">
                      <span class="dot-jupyter-notebook"></span>
                      <p>Jupyter Notebook</p>
