yet another debugging attempt

--- a/index.html
+++ b/index.html
@@ -515,107 +515,105 @@
                <p><span class="text-emphasis high-emphasis-text"></p>
             </div>
          </div>
-         <div class="container-2 swiper-container-mobile fade-mobile">
-            <div class="swiper mySwiper">
-               <div class="swiper-wrapper">
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Student Researcher</h5>
-                        <h6>Princess Margaret Cancer Centre, UHN</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
-                     </div>
+         <div class="swiper mySwiper-mobile">
+            <div class="swiper-wrapper">
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Student Researcher</h5>
+                     <h6>Princess Margaret Cancer Centre, UHN</h6>
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Summer Student</h5>
-                        <h6>Department of Medical Biophysics, UofT</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
-                     </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Editor</h5>
-                        <h6>McMaster's Undergraduate Health Sciences Journal</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/meducator.png" style = "width:65px;height65px">
-                     </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Summer Student</h5>
+                     <h6>Department of Medical Biophysics, UofT</h6>
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Prime Minister</h5>
-                        <h6>York Region District School Board Presidents' Council</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
-                     </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/uoftmbp.png" style = "width:65px;height65px">
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Summer Shadow</h5>
-                        <h6>Baylor Scott and White Health</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/bswhealth.png" style = "width:65px;height65px">
-                     </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Editor</h5>
+                     <h6>McMaster's Undergraduate Health Sciences Journal</h6>
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Research Volunteer</h5>
-                        <h6>St. Michael's Research Centre</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
-                     </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/meducator.png" style = "width:65px;height65px">
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Project Developer</h5>
-                        <h6>Ryde AI</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
-                     </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Prime Minister</h5>
+                     <h6>York Region District School Board Presidents' Council</h6>
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Project Consultant</h5>
-                        <h6>Sidewalk Labs (Google)</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
-                     </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Project Consultant</h5>
-                        <h6>Kidogo Co.</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
-                     </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Summer Shadow</h5>
+                     <h6>Baylor Scott and White Health</h6>
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Student Co-Chair</h5>
-                        <h6>TEDxYouth Toronto</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/tedx.png" style = "width:65px;height65px">
-                     </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/bswhealth.png" style = "width:65px;height65px">
                   </div>
-                  <div class="swiper-slide shadow fade">
-                     <div class = "experience-title">
-                        <h5>Head of Technology</h5>
-                        <h6>Frontline Connect Canada</h6>
-                     </div>
-                     <div class="experience-logo">
-                        <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
-                     </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Research Volunteer</h5>
+                     <h6>St. Michael's Research Centre</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Project Developer</h5>
+                     <h6>Ryde AI</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Sidewalk Labs (Google)</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Kidogo Co.</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Student Co-Chair</h5>
+                     <h6>TEDxYouth Toronto</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/tedx.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow fade">
+                  <div class = "experience-title">
+                     <h5>Head of Technology</h5>
+                     <h6>Frontline Connect Canada</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
                   </div>
                </div>
             </div>
